--- a/balancehall.css
+++ b/balancehall.css
@@ -167,6 +167,64 @@
     display: block;
 }
 
+/* Toggle Switch Container */
+#suppressToggleContainer {
+    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent dark background */
+    margin: 20px 0;
+    text-align: center;
+    font-size: 1.2em;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+
+/* Toggle Switch */
+.toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.toggle-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #4CAF50;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+
 /* Mobile responsiveness */
 @media (max-width: 768px) {
     .balancehall-row {
