--- a/balancehall.css
+++ b/balancehall.css
@@ -177,22 +177,21 @@
     border-radius: 5px;
 }
 
-
 /* Toggle Switch */
-.toggle-switch {
+.balance-toggle-switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
 }
 
-.toggle-switch input {
+.balance-toggle-switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-.slider {
+.balance-toggle-slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -204,7 +203,7 @@
     border-radius: 34px;
 }
 
-.slider:before {
+.balance-toggle-slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -216,13 +215,14 @@
     border-radius: 50%;
 }
 
-input:checked + .slider {
+.balance-toggle-switch input:checked + .balance-toggle-slider {
     background-color: #4CAF50;
 }
 
-input:checked + .slider:before {
+.balance-toggle-switch input:checked + .balance-toggle-slider:before {
     transform: translateX(26px);
 }
+
 
 
 /* Mobile responsiveness */
