--- a/adventure/style.css
+++ b/adventure/style.css
@@ -4,6 +4,13 @@
   margin: 0;
   padding: 0;
 }
+* {
+  -webkit-user-select: none; /* Chrome, Safari, Opera */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* Internet Explorer/Edge */
+  user-select: none;         /* Standard syntax */
+  -webkit-touch-callout: none; /* Prevent callout on iOS */
+}
 html, body {
   overflow-x: hidden;
 }
