--- a/adventure/style.css
+++ b/adventure/style.css
@@ -643,7 +643,7 @@ footer {
 /* ---------------------- */
 .custom-tooltip {
   position: absolute;
-  background: #000;
+  background: #000000c8;
   color: #fff;
   padding: 4px 8px;
   border-radius: 3px;
@@ -685,6 +685,58 @@ footer {
   font-size: 0.9em;
   display: none; /* Hidden by default */
 }
+
+/* --- Settings Modal Buttons --- */
+/* Base style for all buttons in the settings modal */
+.modal-content button {
+  width: 200px;
+  height: 50px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+/* Specific button colors with higher specificity */
+.modal-content button.btn-orange {
+  background-color: #e67e22 !important;
+  color: #fff !important;
+}
+.modal-content button.btn-red {
+  background-color: #e74c3c !important;
+  color: #fff !important;
+}
+.modal-content button.btn-green {
+  background-color: #27ae60 !important;
+  color: #fff !important;
+}
+.modal-content button.btn-gray {
+  background-color: rgb(200, 200, 200) !important;
+  color: #000 !important;
+}
+
+.modal-content button.btn-degens {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* For the Degens Idle button image, force it to fill the button even if the aspect ratio is lost */
+.modal-content button.btn-degens img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  display: block;
+  pointer-events: none;
+}
+
+
 
 
 /* Media Queries for Mobile Devices */
